--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@firebase/app": "^0.7.10",
+    "@firebase/app-compat": "^0.1.19",
+    "@firebase/auth": "^0.19.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
-    "firebase": "8.2.3",
+    "firebase": "^8.10.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -22,7 +24,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "package": "^1.0.1"
   },
   "private": true
 }
