--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-project",
-  "version": "1.0.0",
+  "version": "1.22.17",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.2.0",
     "expo-updates": "~0.11.6",
     "firebase": "9.4.1",
+    "firebase-admin": "^10.0.2",
     "formik": "^2.2.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
