--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.13"
