--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-element-dropdown": "^1.8.8",
     "react-native-fs": "^2.19.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-get-random-values": "~1.7.0",
