--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "9.4.1",
     "firebase-admin": "^10.0.2",
     "formik": "^2.2.9",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
